--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -21,7 +21,9 @@
     "@types/express": "^4.17.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.0.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
