--- a/resurrection-platform/package.json
+++ b/resurrection-platform/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.4.6",
     "node-fetch": "^2.7.0",
     "openai": "^6.9.1",
+    "playwright": "^1.57.0",
     "prisma": "^5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
