--- a/resurrection-platform/package.json
+++ b/resurrection-platform/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@modelcontextprotocol/sdk": "^1.23.0",
+    "@pinecone-database/pinecone": "^6.1.3",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.15",
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.5",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
