--- a/resurrection-platform/package.json
+++ b/resurrection-platform/package.json
@@ -35,14 +35,14 @@
     "form-data": "^4.0.5",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "15.1.3",
     "next-themes": "^0.4.6",
     "node-fetch": "^2.7.0",
     "openai": "^6.9.1",
     "playwright": "^1.57.0",
     "prisma": "^5.22.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -59,7 +59,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "15.1.3",
     "fast-check": "^4.3.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
